--- a/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZPersonalStoreVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/PersonalData/WXZPersonalStoreVC.xib
@@ -10,7 +10,6 @@
                 <outlet property="cardImgView" destination="yZc-eK-G1t" id="c2n-5I-80g"/>
                 <outlet property="myScrollView" destination="p7p-gt-176" id="5qc-60-nxB"/>
                 <outlet property="storeNameTextField" destination="2yI-2b-a4M" id="S1B-TG-cYe"/>
-                <outlet property="uploadProgress" destination="aXA-J9-obL" id="qIt-b4-nYh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,7 +22,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3xb-uj-36y">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="350"/>
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="320"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请上传新门店的名片或其他有效证明，经审核后可绑定到新门店（客户和所有信息都会保留），审核约需要1-2个工作日。" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8z-OA-25k">
                                     <rect key="frame" x="10" y="12" width="580" height="36"/>
@@ -32,7 +31,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V93-lX-o44">
-                                    <rect key="frame" x="0.0" y="68" width="600" height="190"/>
+                                    <rect key="frame" x="0.0" y="68" width="600" height="179"/>
                                     <subviews>
                                         <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="Ga7-y5-AHy">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
@@ -51,31 +50,28 @@
                                                 <outletCollection property="gestureRecognizers" destination="8Zu-FZ-fHP" appends="YES" id="yEp-El-ZjA"/>
                                             </connections>
                                         </imageView>
-                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="aXA-J9-obL">
-                                            <rect key="frame" x="218" y="122" width="164" height="2"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="2" id="Xks-iV-PfU"/>
-                                            </constraints>
-                                        </progressView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="V3t-sl-6oP">
-                                            <rect key="frame" x="0.0" y="134" width="600" height="1"/>
+                                            <rect key="frame" x="0.0" y="123" width="600" height="1"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="KNM-1h-wXC"/>
                                             </constraints>
                                         </imageView>
                                         <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_inputbox" translatesAutoresizingMaskIntoConstraints="NO" id="X9Q-Ng-e6G">
-                                            <rect key="frame" x="17" y="142" width="566" height="40"/>
+                                            <rect key="frame" x="17" y="131" width="566" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="GvJ-Fa-AHs"/>
                                             </constraints>
                                         </imageView>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新门店名称" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2yI-2b-a4M">
-                                            <rect key="frame" x="22" y="155" width="556" height="15"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <rect key="frame" x="22" y="136" width="556" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="IkN-Cp-fzD"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="Ffc-5U-dxV">
-                                            <rect key="frame" x="0.0" y="189" width="600" height="1"/>
+                                            <rect key="frame" x="0.0" y="178" width="600" height="1"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="KxW-GT-EJo"/>
                                             </constraints>
@@ -83,24 +79,20 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
+                                        <constraint firstItem="V3t-sl-6oP" firstAttribute="top" secondItem="yZc-eK-G1t" secondAttribute="bottom" constant="10" id="17v-aN-0BC"/>
                                         <constraint firstItem="V3t-sl-6oP" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" id="3at-Mj-nJ3"/>
                                         <constraint firstAttribute="trailing" secondItem="Ga7-y5-AHy" secondAttribute="trailing" id="BAf-RY-qVD"/>
-                                        <constraint firstItem="V3t-sl-6oP" firstAttribute="top" secondItem="aXA-J9-obL" secondAttribute="bottom" constant="10" id="D6R-rg-vT5"/>
                                         <constraint firstItem="Ffc-5U-dxV" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" id="Doh-4q-dYu"/>
                                         <constraint firstItem="2yI-2b-a4M" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" constant="22" id="FIh-si-vDB"/>
-                                        <constraint firstItem="aXA-J9-obL" firstAttribute="trailing" secondItem="yZc-eK-G1t" secondAttribute="trailing" id="Fiz-Eu-ElQ"/>
                                         <constraint firstAttribute="trailing" secondItem="X9Q-Ng-e6G" secondAttribute="trailing" constant="17" id="Jhk-71-tja"/>
                                         <constraint firstItem="X9Q-Ng-e6G" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" constant="17" id="LSI-ia-Wb1"/>
                                         <constraint firstItem="Ga7-y5-AHy" firstAttribute="top" secondItem="V93-lX-o44" secondAttribute="top" id="VLx-Hg-RZE"/>
                                         <constraint firstItem="Ga7-y5-AHy" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" id="W9D-qO-3z9"/>
                                         <constraint firstAttribute="trailing" secondItem="Ffc-5U-dxV" secondAttribute="trailing" id="Z14-YY-Q71"/>
                                         <constraint firstAttribute="bottom" secondItem="X9Q-Ng-e6G" secondAttribute="bottom" constant="8" id="brm-X2-l5a"/>
-                                        <constraint firstItem="aXA-J9-obL" firstAttribute="top" secondItem="yZc-eK-G1t" secondAttribute="bottom" constant="9" id="ePh-ya-MPW"/>
                                         <constraint firstItem="X9Q-Ng-e6G" firstAttribute="top" secondItem="V3t-sl-6oP" secondAttribute="bottom" constant="7" id="f3J-jc-k61"/>
                                         <constraint firstItem="yZc-eK-G1t" firstAttribute="top" secondItem="Ga7-y5-AHy" secondAttribute="bottom" constant="8" id="h5o-2V-pGz"/>
                                         <constraint firstAttribute="bottom" secondItem="Ffc-5U-dxV" secondAttribute="bottom" id="lNy-ER-T4r"/>
-                                        <constraint firstItem="aXA-J9-obL" firstAttribute="leading" secondItem="yZc-eK-G1t" secondAttribute="leading" id="lbl-IR-bvD"/>
-                                        <constraint firstAttribute="centerX" secondItem="aXA-J9-obL" secondAttribute="centerX" id="mKI-Yb-dKR"/>
                                         <constraint firstAttribute="centerX" secondItem="yZc-eK-G1t" secondAttribute="centerX" id="mQD-TY-KJh"/>
                                         <constraint firstAttribute="trailing" secondItem="V3t-sl-6oP" secondAttribute="trailing" id="p3S-Wl-r8Y"/>
                                         <constraint firstItem="2yI-2b-a4M" firstAttribute="centerY" secondItem="X9Q-Ng-e6G" secondAttribute="centerY" id="rWC-Lh-4L2"/>
@@ -108,7 +100,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tZs-me-5ur">
-                                    <rect key="frame" x="18" y="268" width="564" height="44"/>
+                                    <rect key="frame" x="18" y="257" width="564" height="44"/>
                                     <state key="normal" title="提交审核" backgroundImage="wo_determine">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -123,7 +115,7 @@
                                 <constraint firstAttribute="trailing" secondItem="tZs-me-5ur" secondAttribute="trailing" constant="18" id="4N3-r2-foO"/>
                                 <constraint firstItem="B8z-OA-25k" firstAttribute="top" secondItem="3xb-uj-36y" secondAttribute="top" constant="12" id="Cae-E7-zq7"/>
                                 <constraint firstAttribute="trailing" secondItem="V93-lX-o44" secondAttribute="trailing" id="E1i-E6-qnj"/>
-                                <constraint firstAttribute="height" constant="350" id="Vlg-Ja-siS"/>
+                                <constraint firstAttribute="height" constant="320" id="Vlg-Ja-siS"/>
                                 <constraint firstItem="tZs-me-5ur" firstAttribute="top" secondItem="V93-lX-o44" secondAttribute="bottom" constant="10" id="awg-Pv-KfE"/>
                                 <constraint firstItem="V93-lX-o44" firstAttribute="leading" secondItem="3xb-uj-36y" secondAttribute="leading" id="dAl-cJ-lsF"/>
                                 <constraint firstItem="V93-lX-o44" firstAttribute="top" secondItem="B8z-OA-25k" secondAttribute="bottom" constant="20" id="iSj-Sl-u78"/>
