--- a/rufangrongke/rufangrongke/Classes/loupan/WXZLouPanYongJinCell_1.xib
+++ b/rufangrongke/rufangrongke/Classes/loupan/WXZLouPanYongJinCell_1.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="138" id="cwV-lP-gUI" customClass="WXZLouPanYongJinCell_1">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="138" id="cwV-lP-gUI" customClass="WXZLouPanYongJinCell_1">
             <rect key="frame" x="0.0" y="0.0" width="363" height="144"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cwV-lP-gUI" id="Io0-hc-Lwr">
