1110 王晓植: 楼盘详情改成一个请求

--- a/rufangrongke/rufangrongke/Classes/loupan/View/WXZTableViewCell.xib
+++ b/rufangrongke/rufangrongke/Classes/loupan/View/WXZTableViewCell.xib
@@ -150,6 +150,7 @@
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="gA5-LO-dIs"/>
                         <exclude reference="Ask-Pa-fzh"/>
                     </mask>
                 </variation>
