--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZGouFangYiXiangCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZGouFangYiXiangCell.xib
@@ -23,21 +23,11 @@
                                 <color key="textColor" red="0.10588235294117647" green="0.10980392156862745" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kh_rbjt" translatesAutoresizingMaskIntoConstraints="NO" id="hkA-RW-Z5I">
-                                <rect key="frame" x="347" y="5" width="11" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="11" id="Zpd-y0-j2q"/>
-                                    <constraint firstAttribute="height" constant="20" id="iFM-2O-UEY"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tI7-TU-hy2" userLabel="yixiang">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="29"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <action selector="goufangyixiangAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eaJ-Ly-ZS4"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -45,13 +35,11 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="tI7-TU-hy2" secondAttribute="trailing" id="7sl-s7-yna"/>
                             <constraint firstAttribute="bottom" secondItem="tI7-TU-hy2" secondAttribute="bottom" id="9Um-we-C2w"/>
-                            <constraint firstAttribute="trailing" secondItem="hkA-RW-Z5I" secondAttribute="trailing" constant="17" id="DR7-Am-PpI"/>
                             <constraint firstItem="JJE-4X-uks" firstAttribute="leading" secondItem="meK-cY-kOp" secondAttribute="leading" constant="10" id="eHe-vK-tjC"/>
-                            <constraint firstAttribute="centerY" secondItem="hkA-RW-Z5I" secondAttribute="centerY" id="et0-j0-f5M"/>
                             <constraint firstAttribute="centerY" secondItem="JJE-4X-uks" secondAttribute="centerY" id="ip3-dB-dA3"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="JJE-4X-uks" secondAttribute="trailing" constant="10" id="qzO-Xq-l0L"/>
                             <constraint firstItem="tI7-TU-hy2" firstAttribute="top" secondItem="meK-cY-kOp" secondAttribute="top" id="rn3-G5-sQo"/>
                             <constraint firstItem="tI7-TU-hy2" firstAttribute="leading" secondItem="meK-cY-kOp" secondAttribute="leading" id="w40-U5-QXl"/>
-                            <constraint firstItem="hkA-RW-Z5I" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JJE-4X-uks" secondAttribute="trailing" constant="10" id="yRf-WW-Pud"/>
                             <constraint firstAttribute="height" constant="29" id="z1o-OB-I3H"/>
                         </constraints>
                     </view>
@@ -122,7 +110,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="kh_rbjt" width="11" height="20"/>
         <image name="kh_zoom_in" width="24" height="24"/>
         <image name="wo_dottedline" width="355" height="1"/>
     </resources>
